# libmrhab

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Building/: Building.rst
doc/source/Classes/: Classes.rst
doc/source/Classes/_Internal/libmrhab_Directory/Module/: MRH_ModuleStack.rst
doc/source/Classes/_Internal/libmrhab_Directory/ThreadPool/: MRH_ThreadPool.rst
doc/source/Classes/libmrhab/: libmrhab.rst
doc/source/Classes/libmrhab_Directory/: MRH_ABException.rst  MRH_EventStorage.rst
doc/source/Classes/libmrhab_Directory/Module/: MRH_Module.rst  MRH_ModuleException.rst
doc/source/Classes/libmrhab_Directory/Module/Common/: MRH_CheckServiceModule.rst  MRH_SpeechInputModule.rst  MRH_SpeechOutputModule.rst
doc/source/Classes/libmrhab_Directory/Module/Tools/: MRH_ModuleLogger.rst  MRH_ModuleTimer.rst
doc/source/Enumerations/: Enumerations.rst
doc/source/Enumerations/libmrhab_Directory/Module/Common/MRH_CheckServiceModule/: Result.rst  Service.rst
doc/source/Enumerations/libmrhab_Directory/Module/MRH_Module/: Result.rst
doc/source/Functions/: Functions.rst
doc/source/Functions/_Internal/libmrhab_Directory/Module/MRH_ModuleStack/: GetCurrent.rst  MRH_ModuleStack_0.rst  UpdateCurrent.rst  ~MRH_ModuleStack.rst
doc/source/Functions/_Internal/libmrhab_Directory/ThreadPool/MRH_ThreadPool/: AddJob.rst  MRH_ThreadPool_0.rst  PerformJobs.rst  Update.rst  ~MRH_ThreadPool.rst
doc/source/Functions/libmrhab/: AddJob.rst  IsValidEventType.rst  Update.rst  libmrhab_0.rst  ~libmrhab.rst
doc/source/Functions/libmrhab_Directory/MRH_ABException/: MRH_ABException_0.rst  MRH_ABException_1.rst  what.rst  what2.rst  ~MRH_ABException.rst
doc/source/Functions/libmrhab_Directory/MRH_ABRevision/: MRH_GetLibraryVersionMajor.rst  MRH_GetLibraryVersionMinor.rst  MRH_GetLibraryVersionPatch.rst
doc/source/Functions/libmrhab_Directory/MRH_EventStorage/: Add.rst  Add_0.rst  Add_1.rst  Clear.rst  GetCount.rst  GetEvent_0.rst  GetEvent_1.rst  MRH_EventStorage_0.rst  RemoveFront.rst  Singleton.rst  ~MRH_EventStorage.rst
doc/source/Functions/libmrhab_Directory/Module/Common/MRH_CheckServiceModule/: MRH_CheckServiceModule_0.rst  ~MRH_CheckServiceModule.rst
doc/source/Functions/libmrhab_Directory/Module/Common/MRH_SpeechInputModule/: MRH_SpeechInputModule_0.rst  ~MRH_SpeechInputModule.rst
doc/source/Functions/libmrhab_Directory/Module/Common/MRH_SpeechOutputModule/: MRH_SpeechOutputModule_0.rst  ~MRH_SpeechOutputModule.rst
doc/source/Functions/libmrhab_Directory/Module/MRH_Module/: CanHandleEvent.rst  GetName.rst  HandleEvent.rst  MRH_Module_0.rst  NextModule.rst  Update.rst  ~MRH_Module.rst
doc/source/Functions/libmrhab_Directory/Module/MRH_ModuleException/: MRH_ModuleException_0.rst  MRH_ModuleException_1.rst  module.rst  module2.rst  what.rst  what2.rst  ~MRH_ModuleException.rst
doc/source/Functions/libmrhab_Directory/Module/Tools/MRH_ModuleLogger/: Log_0.rst  Log_1.rst  MRH_ModuleLogger_0.rst  ~MRH_ModuleLogger.rst
doc/source/Functions/libmrhab_Directory/Module/Tools/MRH_ModuleTimer/: GetTimerFinished.rst  GetTimerSet.rst  MRH_ModuleTimer_0.rst  ResetTimer.rst  SetTimer.rst  ~MRH_ModuleTimer.rst
doc/source/Macros/: Macros.rst
doc/source/Macros/_Internal/libmrhab_Directory/MRH_EventStorage/: MRH_EVENT_STORAGE_RESERVE_STEP.rst
doc/source/Macros/_Internal/libmrhab_Directory/Module/MRH_ModuleStack/: MRH_MODULESTACK_CLOSE_APP.rst  MRH_MODULESTACK_CONTINUE.rst  MRH_MODULESTACK_RESULT.rst
doc/source/Macros/libmrhab/: LIBMRHAB_UPDATE_CLOSE_APP.rst  LIBMRHAB_UPDATE_CONTINUE.rst  LIBMRHAB_UPDATE_RESULT.rst
doc/source/Macros/libmrhab_Directory/MRH_ABRevision/: MRH_APP_BASE_LIB_VERSION_MAJOR.rst  MRH_APP_BASE_LIB_VERSION_MINOR.rst  MRH_APP_BASE_LIB_VERSION_PATCH.rst
doc/source/Macros/libmrhab_Directory/Module/MRH_Module/: event_cast.rst
doc/source/Namespaces/: Namespaces.rst
doc/source/Namespaces/libmrhab_Directory/: MRH_AppBaseRevision.rst
doc/source/Usage/: Usage.rst
doc/source/Usage/App_Loop/: App_Loop.rst
doc/source/Usage/Module/: Module.rst  Module_Stack.drawio
include/libmrhab/: libmrhab.h
include/libmrhab/libmrhab/: MRH_ABException.h  MRH_ABRevision.h  MRH_EventStorage.h
include/libmrhab/libmrhab/Module/: MRH_Module.h  MRH_ModuleException.h
include/libmrhab/libmrhab/Module/Common/: MRH_CheckServiceModule.h  MRH_CommonModule.h  MRH_SpeechInputModule.h  MRH_SpeechOutputModule.h
include/libmrhab/libmrhab/Module/Tools/: MRH_ModuleLogger.h  MRH_ModuleTimer.h
src/: libmrhab.cpp
src/libmrhab/: MRH_ABRevision.cpp  MRH_EventStorage.cpp
src/libmrhab/Module/: MRH_Module.cpp  MRH_ModuleStack.cpp  MRH_ModuleStack.h
src/libmrhab/Module/Common/: MRH_CheckServiceModule.cpp  MRH_SpeechInputModule.cpp  MRH_SpeechOutputModule.cpp
src/libmrhab/Module/Tools/: MRH_ModuleLogger.cpp  MRH_ModuleTimer.cpp
src/libmrhab/ThreadPool/: MRH_ThreadPool.cpp  MRH_ThreadPool.h
